# trigrad

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  renderer.ipynb  setup.py  viewer.py
notebooks/: renderer.ipynb
src/: setup.py
src/difftet/: __init__.py  module.cpp  module.cu  render.cu  render.h  tests.cu  tests.h  tests_wrapper.py  util.cpp  util.h  wrapper.py
src/trigrad/: __init__.py  module.cu  render.cu  render.h  tests.cu  tests.h  tests_wrapper.py  util.cu  util.h  util.py  wrapper.py
tests/: test_components.py  test_render_gradients.py  testcases.py
